--- a/Quark/packages.config
+++ b/Quark/packages.config
@@ -3,6 +3,9 @@
   <package id="AvalonEdit" version="6.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net472" />
+  <package id="MaterialDesign.Icons" version="1.1.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
