--- a/Quark/packages.config
+++ b/Quark/packages.config
@@ -8,6 +8,17 @@
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NLog" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Config" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.6.8" targetFramework="net472" />
   <package id="Prism.Core" version="7.2.0.1422" targetFramework="net472" />
+  <package id="System.Reactive" version="4.3.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Threading.Channels" version="4.7.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
+  <package id="ToastNotifications" version="2.5.1" targetFramework="net472" />
+  <package id="ToastNotifications.Messages" version="2.5.1" targetFramework="net472" />
+  <package id="Websocket.Client" version="4.2.3" targetFramework="net472" />
 </packages>
