--- a/Quark/NLog.config
+++ b/Quark/NLog.config
@@ -3,12 +3,18 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
   <targets>
-    <target name="quarklog" xsi:type="File" fileName="quarklog.log" />
-    <target name="quarklog_console" xsi:type="Console" />
+    <target name="quark_log"
+    xsi:type="File"
+    layout="${longdate}|${level}| ${message}"
+    deleteOldFileOnStartup="True"
+    concurrentWrites="true"
+    KeepFileOpen ="False"
+    fileName="${specialfolder:folder=ApplicationData}/Quark/Logs/quark_log.log"
+    encoding="utf-8"/>
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Info" writeTo="logconsole" />
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Info" writeTo="quark_log" />
+    <logger name="*" minlevel="Debug" writeTo="quark_log" />
   </rules>
 </nlog>
